--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <body>
         <script src="js/pixi.min.js"></script>
         <script src="js/keyboard.js"></script>
+        <script src="js/Rooms.js"></script>
+        <script src="js/Tile.js"></script>
         <script src="js/Player.js"></script>
         <script src="js/Game.js"></script>
     </body>
