--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
         <script src="js/Tile.js"></script>
         <script src="js/Player.js"></script>
         <script src="js/Game.js"></script>
+        <script src="js/GameOver.js"></script>
+        <script src="js/SceneManager.js"></script>
     </body>
 </html>
